# Esercitazione_5_STL

./: .gitignore
Esercise1_final/: CMakeLists.txt  main.cpp
Esercise1_final/src/: CMakeLists.txt  TriangularMesh.hpp  Utils.cpp  Utils.hpp
Exercise2/: main.cpp
Exercise2/src/: PolygonalMesh.hpp  Utils.cpp  Utils.hpp
